--- a/src/cableaccountmanager/admin/adminMainWindow.fxml
+++ b/src/cableaccountmanager/admin/adminMainWindow.fxml
@@ -48,7 +48,7 @@
                             <TableColumn fx:id="clmCardTab2" prefWidth="110.0" text="Card Number" />
                               <TableColumn fx:id="clmUserTab2" prefWidth="144.0" text="User Name" />
                               <TableColumn fx:id="clmAreaTab2" prefWidth="113.0" text="Area" />
-                              <TableColumn fx:id="tblBillAmountTab2" prefWidth="81.0" text="Bill Amount" />
+                              <TableColumn fx:id="clmBillAmountTab2" prefWidth="81.0" text="Bill Amount" />
                               <TableColumn fx:id="clmPaidAmountTab2" prefWidth="86.0" text="Paid Amount" />
                               <TableColumn fx:id="clmDateTab2" prefWidth="92.0" text="Date" />
                           </columns>
